--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>PSW Gen Wannabe</title>
     <script type="text/javascript" src="js/script.js"></script>
+
+    <title>PSW Gen Wannabe</title>
 </head>
 
 <body>
-
+    <h2 id="pswOutput"></h2>
 </body>
 
 </html>
