--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/script.js"></script>
-
     <title>PSW Gen Wannabe</title>
+
 </head>
 
 <body>
     <h2 id="pswOutput"></h2>
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
