--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
     <title>PSW Gen Wannabe</title>
 
 </head>
 
 <body>
-    <h2 id="pswOutput"></h2>
+    <div class="container-fluid bg-dark w-100 h-100">
+        <div class="row">
+            <div class="col-12 text-center text-white">
+                <h1>Your new Password</h1>
+                <h2 id="pswOutput"></h2>
+            </div>
+        </div>
+    </div>
     <script src="js/script.js"></script>
-
 </body>
 
 </html>
