--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
     <title>PSW Gen Wannabe</title>
 
@@ -22,7 +22,6 @@
             </div>
         </div>
     </div>
-    <script src="js/script.js"></script>
 </body>
 
 </html>
